--- a/README.Rmd
+++ b/README.Rmd
@@ -18,13 +18,13 @@ Currently this repository contains only response time data for Experiment 2.
 suppressPackageStartupMessages(library("tidyverse"))
 
 tribble(~column, ~description,
-        "subj", "unique subject identifier",
-        "item", "unique stimulus item identifier",
-        "spkr", "whether the speaker was old or new",
-        "prec", "whether the precedent was broken or maintained",
-        "load", "whether the subject was under cognitive load",
-        "rt_trunc", "response time, truncated at 5171 ms",
-        "rt_raw", "response time, not truncated") %>%
+        "`subj`", "unique subject identifier",
+        "`item`", "unique stimulus item identifier",
+        "`spkr`", "whether the speaker was old or new",
+        "`prec`", "whether the precedent was broken or maintained",
+        "`load`", "whether the subject was under cognitive load",
+        "`rt_trunc`", "response time, truncated at 5171 ms",
+        "`rt_raw`", "response time, not truncated") %>%
   knitr::kable("markdown")
 ```
 
@@ -62,7 +62,7 @@ by_subj <- ez::ezANOVA(subj_means_trunc,
             type = 3)$ANOVA
 
 by_subj %>%
-  knitr::kable("markdown", digits = 2)
+  knitr::kable("markdown", digits = 2, row.names = FALSE) 
 ```
 
 #### Analysis by Item (p. 448)
@@ -83,5 +83,5 @@ by_item <- ez::ezANOVA(item_means_trunc,
             type = 3)$ANOVA
 
 by_item %>%
-  knitr::kable("markdown", digits = 2)
+  knitr::kable("markdown", digits = 2, row.names = FALSE)
 ```
